--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,10 +12,11 @@ services:
       - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
     volumes:
       - db:/var/lib/mysql
+
   node_app:
     depends_on:
       - mysqldb
-    build: ./api_learn
+    build: ./api_learnlytica
     container_name: node_app
     restart: unless-stopped
     env_file: ./.env
@@ -28,7 +29,18 @@ services:
       - DB_NAME=$MYSQLDB_DATABASE
       - DB_PORT=$MYSQLDB_DOCKER_PORT
     stdin_open: true
-    tty: true 
-volumes:
+    tty: true
+ # docker-compose up  #forebgroud 
+ #  docker-compose up -d #backgroud/detached mode
+  angular_app:
+    depends_on:
+      - node_app
+    build: ./learnlytica #build image and then start container from img
+    container_name: angular_app
+    restart: unless-stopped
+    ports:
+      - 9090:4200
+    stdin_open: true #show up logs from container trobleshooting
+    tty: true
+volumes: 
   db:
-
