--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
   node_app:
     depends_on:
       - mysqldb
-    build: ./api_learnlytica
+    build: ./api_learn
     container_name: node_app
     restart: unless-stopped
     env_file: ./.env
